--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
   ],
   "require": {
     "php": ">=7.0",
-    "guzzlehttp/guzzle": "^6.3"
+    "ext-curl": "*",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
